tests/valid/trait/method_call_ufcs.facet
trait Runner {
  fn run(self: Self) -> ();
}

impl Runner for unrestricted isize {
  fn run(self: Self) -> () {
    ()
  }
}

fn main() -> unrestricted () {
  (<unrestricted isize as Runner>::run 0)
}
