tests/invalid/trait/deriving_enum_syntax_deferred.facet
trait Show {
  fn show(self: Self) -> unrestricted isize;
}

enum Token deriving Show {
  Start,
  Stop
}

fn main() -> unrestricted isize {
  0
}
